--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(ADD THE NOTEBOOK NAME HERE)**"
+        "# **Data Collection Notebook**"
       ]
     },
     {
@@ -17,19 +17,18 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write your notebook objective here, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Fetch data from Kaggle and save it as raw data.\n",
+        "* Inspect the data and save it under outputs/datasets/collection\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "*   Kaggle JSON file - the authentication token.\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* Generate Dataset: \n",
+        "- outputs/datasets/collection/HousePricing.csv\n",
+        "- \"outputs/datasets/collection/InheritedHouses.csv\"\n"
       ]
     },
     {
@@ -42,19 +41,29 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Install python packages in the notebooks"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%pip install -r /workspace/HeritageHousePrediction/requirements.txt"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "cqP-UeN-z3i2"
       },
       "source": [
         "# Change working directory"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* We are assuming you will store the notebooks in a subfolder, therefore when running the notebook in the editor, you will need to change the working directory"
       ]
     },
     {
@@ -71,8 +80,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "wZfF_j-Bz3i4",
-        "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
+        "id": "wZfF_j-Bz3i4"
       },
       "outputs": [],
       "source": [
@@ -87,7 +95,7 @@
         "id": "9MWW8E7lz3i7"
       },
       "source": [
-        "We want to make the parent of the current directory the new current directory\n",
+        "We want to make the parent of the current directory the new current directory.\n",
         "* os.path.dirname() gets the parent directory\n",
         "* os.chir() defines the new current directory"
       ]
@@ -96,8 +104,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "TwHsQRWjz3i9",
-        "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
+        "id": "TwHsQRWjz3i9"
       },
       "outputs": [],
       "source": [
@@ -118,8 +125,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vz3S-_kjz3jA",
-        "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
+        "id": "vz3S-_kjz3jA"
       },
       "outputs": [],
       "source": [
@@ -133,22 +139,84 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
+        "# Fetch data from Kaggle"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "XQrZFfd_J4Ix"
+      },
       "source": [
-        "Section 1 content"
+        "Install Kaggle package to fetch data"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Xk7DU_ekbtX8"
+      },
       "outputs": [],
-      "source": []
+      "source": [
+        "%pip install kaggle==1.5.12"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "LVlh18YgbyEg"
+      },
+      "outputs": [],
+      "source": [
+        "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()\n",
+        "! chmod 600 kaggle.json"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZW6SBfh8tryn"
+      },
+      "source": [
+        "Define the Kaggle dataset, and destination folder and download it."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Rc45oPyntryo"
+      },
+      "outputs": [],
+      "source": [
+        "KaggleDatasetPath = \"codeinstitute/housing-prices-data\"\n",
+        "DestinationFolder = \"inputs/datasets/raw\"   \n",
+        "! kaggle datasets download -d {KaggleDatasetPath} -p {DestinationFolder}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ji0ry2Gotryo"
+      },
+      "source": [
+        "Unzip the downloaded file, delete the zip file and delete the kaggle.json file"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bxYIDRGLtryp"
+      },
+      "outputs": [],
+      "source": [
+        "! unzip {DestinationFolder}/*.zip -d {DestinationFolder} \\\n",
+        "  && rm {DestinationFolder}/*.zip \\\n",
+        "  && rm kaggle.json"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -165,14 +233,21 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Section 2"
+        "# Load and Inspect Data"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CjEM52Z1YLRP"
+      },
+      "outputs": [],
       "source": [
-        "Section 2 content"
+        "import pandas as pd\n",
+        "df = pd.read_csv(\"inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/house_prices_records.csv\")\n",
+        "inherited_houses = pd.read_csv(\"inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/inherited_houses.csv\")\n",
+        "df.head()"
       ]
     },
     {
@@ -180,35 +255,37 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": [
-        "---"
+        "inherited_houses"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "cKG2pKb3hmY4"
+      },
       "source": [
-        "NOTE"
+        "DataFrame Summary"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "YtKKWuPhg7r8"
+      },
+      "outputs": [],
       "source": [
-        "* You may add as many sections as you want, as long as they support your project workflow.\n",
-        "* All notebook's cells should be run top-down (you can't create a dynamic wherein a given point you need to go back to a previous cell to execute some task, like go back to a previous cell and refresh a variable content)"
+        "df.info()"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
-        "---"
+        "inherited_houses.info()"
       ]
     },
     {
@@ -221,27 +298,23 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* If you do not need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
+        "id": "aKlnIozA4eQO"
       },
       "outputs": [],
       "source": [
         "import os\n",
         "try:\n",
         "  # create here your folder\n",
-        "  # os.makedirs(name='')\n",
+        "  os.makedirs(name='outputs/datasets/collection')\n",
         "except Exception as e:\n",
-        "  print(e)\n"
+        "  print(e)\n",
+        "\n",
+        "df.to_csv('outputs/datasets/collection/HousePricing.csv', index=False)\n",
+        "\n",
+        "inherited_houses.to_csv('outputs/datasets/collection/InheritedHouses.csv',index=False)"
       ]
     }
   ],
@@ -269,10 +342,10 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.8.17"
     },
     "orig_nbformat": 2
   },
   "nbformat": 4,
-  "nbformat_minor": 2
+  "nbformat_minor": 0
 }
