--- a/jupyter_notebooks/03 - DataCleaning.ipynb
+++ b/jupyter_notebooks/03 - DataCleaning.ipynb
@@ -580,6 +580,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I'll Also apply this step to the entire dataset and save for use in the streamlit dashboard. So client can inspect the dataset as used."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
