--- a/jupyter_notebooks/04 - FeatureEngineering.ipynb
+++ b/jupyter_notebooks/04 - FeatureEngineering.ipynb
@@ -150,42 +150,8 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "df = pd.read_csv('outputs/datasets/collection/HousePricing.csv')\n",
-        "df"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NNJOqym1a38e"
-      },
-      "source": [
-        "### Split Train and Test Set"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "L-WRjItbiOs6"
-      },
-      "outputs": [],
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "TrainSet, TestSet, _, __ = train_test_split(\n",
-        "                                        df,\n",
-        "                                        df['SalePrice'],\n",
-        "                                        test_size=0.2,\n",
-        "                                        random_state=0)\n",
-        "\n",
-        "print(f\"TrainSet shape: {TrainSet.shape} \\nTestSet shape: {TestSet.shape}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Data Cleaning Pipeline"
+        "TrainSet = pd.read_csv('outputs/datasets/collection/cleaned/TrainSet.csv')\n",
+        "TestSet = pd.read_csv('outputs/datasets/collection/cleaned/TestSet.csv')"
       ]
     },
     {
@@ -194,29 +160,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.pipeline import Pipeline\n",
-        "from feature_engine.imputation import CategoricalImputer\n",
-        "from feature_engine.imputation import MeanMedianImputer\n",
-        "from feature_engine.selection import DropFeatures\n",
-        "pipeline = Pipeline([\n",
-        "      ('Median', MeanMedianImputer(imputation_method='median', \n",
-        "                                   variables=['2ndFlrSF', 'BedroomAbvGr', 'GarageYrBlt', \n",
-        "                                              'LotFrontage', 'MasVnrArea']\n",
-        "                                              )),\n",
-        "      ('CategoricalImputer', CategoricalImputer(imputation_method='missing', \n",
-        "                                                fill_value='No Record', \n",
-        "                                                variables=['BsmtFinType1','GarageFinish']\n",
-        "                                                )),\n",
-        "      ('Drop', DropFeatures(features_to_drop=['EnclosedPorch', 'WoodDeckSF']))\n",
-        "])\n",
-        "pipeline"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Fit Pipeline"
+        "TrainSet.head()"
       ]
     },
     {
@@ -225,9 +169,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pipeline.fit(TrainSet)\n",
-        "\n",
-        "TrainSet, TestSet = pipeline.transform(TrainSet) , pipeline.transform(TestSet)"
+        "TestSet.head()"
       ]
     },
     {
